--- a/src/components/board/board.css
+++ b/src/components/board/board.css
@@ -23,14 +23,14 @@
     grid-column: span 5;
 }
 
-@media only screen and (min-width: 500px) {
+@media only screen and (min-width: 600px) {
     .board {
       width: 500px;
       height: 500px;
     }
   }
 
-  @media only screen and (min-width: 1200px) and (min-height: 800px){
+  @media only screen and (min-width: 1200px) and (min-height: 850px){
     .board {
       width: 650px;
       height: 650px;
